# Doomcord

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py
src/bot/: main.py
src/doom/: __init__.py  engine.py  frame_buffer.py  session.py
